@@ -4,23 +4,23 @@ Summary: The GNU versions of grep pattern matching utilities.
 Name: grep
 Version: 2.5.2
 %if "%{beta}" != ""
-Release: 0.%{beta}.%{rel}
+Release: 0.%{beta}.%{rel}ark
 %else
-Release: %{rel}
+Release: %{rel}ark
 %endif
 License: GPL
 Group: Applications/Text
-Source: ftp://ftp.gnu.org/pub/gnu/grep/grep-%{version}%{beta}.tar.bz2
+Source: ftp://ftp.gnu.org/pub/gnu/grep/grep-%{version}%{beta}.tar.lz
 Prereq: /sbin/install-info
 Buildroot: %{_tmppath}/%{name}-%{version}-root
 Requires: pcre
 Buildrequires: pcre-devel
 
 %description
-The GNU versions of commonly used grep utilities.  The grep command
-searches through textual input for lines which contain a match to a
-specified pattern and then prints the matching lines.  The GNU grep
-utilities include grep, egrep, and fgrep.
+The GNU versions of commonly used grep utilities.  Grep searches
+through textual input for lines which contain a match to a specified
+pattern and then prints the matching lines.  GNU's grep utilities
+include grep, egrep and fgrep.
 
 You should install grep on your system, because it is a very useful
 utility for searching through text.
@@ -30,16 +30,17 @@ utility for searching through text.
 
 %build
 [ ! -e configure ] && ./autogen.sh
-%configure --prefix=%_prefix --without-included-regex
+%configure --without-included-regex
 make %?_smp_mflags
 
 %install
 rm -rf ${RPM_BUILD_ROOT}
-%makeinstall LDFLAGS=-s prefix=${RPM_BUILD_ROOT}%{_prefix} exec_prefix=${RPM_BUILD_ROOT}
+#makeinstall LDFLAGS=-s prefix=${RPM_BUILD_ROOT}%{_prefix} exec_prefix=${RPM_BUILD_ROOT}
+make install DESTDIR="$RPM_BUILD_ROOT"
 %ifos Linux
 mkdir -p $RPM_BUILD_ROOT/bin
-mv $RPM_BUILD_ROOT%{_prefix}/bin/* $RPM_BUILD_ROOT/bin
-rm -rf $RPM_BUILD_ROOT%{_prefix}/bin
+mv $RPM_BUILD_ROOT%{_bindir}/* $RPM_BUILD_ROOT/bin
+rm -rf $RPM_BUILD_ROOT%{_bindir}
 %endif
 
 %find_lang %name
@@ -62,11 +63,14 @@ fi
 %ifos Linux
 /bin/*
 %else
-%{_prefix}/bin/*
+%{_bindir}/*
 %endif
-%{_infodir}/*.info.gz
+%{_infodir}/*.info*
 %{_mandir}/*/*
 
 %changelog
-* Sat Nov 25 2006 Bernhard Rosenkraenzer <bero@arklinux.org> 2.5.2-1
+* Sat Nov 25 2006 Bernhard Rosenkraenzer <bero@arklinux.org> 2.5.2-1ark
 - 2.5.2
+
+* Mon Nov 29 2004 Bernhard Rosenkraenzer <bero@arklinux.org> 2.5.1a-1ark
+- 2.5.1a
